fixed back button alignment

--- a/src/Playbook/Playbook.css
+++ b/src/Playbook/Playbook.css
@@ -1,11 +1,3 @@
-/* body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    height: 100vh;
-    overflow: hidden;
-} */
-
 .playbook-page {
     width: 100%;
     display: flex;
@@ -17,7 +9,7 @@
 
 .playbook-container {
   width: 100%;
-  max-width: 1244px;
+  max-width: 1220px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -320,7 +312,8 @@
     position: sticky;
     top: 48px;
     transition: background-color ease 0.2s;
-    width: 266px;
+    width: 300px;
+    box-sizing: border-box;
   }
 
   .tertiary {
